Base components to connect CoreUI and to connect MongoDB

--- a/CRM/views/index.ejs
+++ b/CRM/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Welcome to the New CRM</h1>
+    <h3><a href="/data-entry">Data Entry</a></h3>
+    <h3><a href="/reports">Reports</a></h3>
   </body>
 </html>
