--- a/CRM/views/data-entry.ejs
+++ b/CRM/views/data-entry.ejs
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>Welcom to the Data Entry Page</h1>
-    <li><a href="/customer-entry">Customer Data Entry</a></li>
+    <li><a href="/client-entry">Client Data Entry</a></li>
     <li><a href="/contact-entry">Contact Data Entry</a></li>
-    <li><a href="/events-entry">Events Data Entry</a></li>
-    <li><a href="/employee-entry">Employee Data Entry</a></li>
+    <li><a href="/event-entry">Events Data Entry</a></li>
+    <li><a href="/agent-entry">Agent Data Entry</a></li>
   </body>
 </html>
