--- a/CRM/views/event-entry.ejs
+++ b/CRM/views/event-entry.ejs
@@ -4,12 +4,12 @@
     <link rel="stylesheet" href="https://unpkg.com/@coreui/coreui/dist/css/coreui.min.css">
   </head>
   <body class="app">
-    <h1>Welcome to the Customer Data Entry Page</h1>
+    <h1>Welcome to the Events Data Entry Page</h1>
 
 <!--Refer to "https://coreui.io/docs/components/forms/" for instruction on how to change form-->
 <main class="main">
 
-<form id="formAddCustomer" name="addCustomer" method="post" action="/addCustomer">> 
+<form id="formAddEvent" name="addEvent" method="post" action="/addEvent">> 
   <div class="form-group">
     <label for="exampleFormControlInput1">Email address</label>
     <input type="email" class="form-control" id="exampleFormControlInput1" name="useremail" placeholder="name@example.com">
@@ -38,12 +38,8 @@
     <label for="exampleFormControlTextarea1">Example textarea</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" name="username" rows="3"></textarea>
   </div>
-  <input class="btn btn-primary" type="submit" value="Submit">
+<input class="btn btn-primary" type="submit" value="Submit">
 </form>
-
-
-
-
 
 </main>
 
