--- a/CRM/views/contact-entry.ejs
+++ b/CRM/views/contact-entry.ejs
@@ -26,36 +26,62 @@ We need to implement the following fields
     lastModified        (DateTime)         - How do we end up modifying this? We currently don't have any means to modify items
     Contact Active      (Boolean)          - How do we end up changing this ever? Do we need a modify field?
 --> 
-  <div class="form-group">
-    <label for="contactName">Contact Name</label>
-    <textarea class="form-control" id="contactName" name="contactName" rows="1"></textarea>
-  </div>
+  
+<!-- Contact Name-->
+<div class="form-group">
+  <label for="clientPhone">Contact Name</label>
+    <div class="form-row">
+			<div class="col-auto">
+			  <input type="text" class="form-control" id="contactFirstName" name="contactFirstName" placeholder="First Name">
+			</div>
+			<div class="col-auto">
+			  <input type="text" class="form-control" id="contactLastName" name="contactLastName" placeholder="Last Name">
+			</div>
+	</div>
+</div>
+  
+<!-- Contact Position-->
+<div class="form-group">
+  <label for="clientPhone">Position</label>
+    <div class="form-row">
+			<div class="col-auto">
+			  <input type="text" class="form-control" id="contactPosition" name="contactPosition" placeholder="Position">
+			</div>
+	</div>
+</div>  
+  
+ <!-- Contact Numbers-->
+<div class="form-group">
+  <label for="clientPhone">Contact Numbers</label>
+    <div class="form-row">
+			<div class="col-auto">
+			  <input type="text" class="form-control" id="contactPhone" name="contactPhone" placeholder="Phone Number">
+			</div>
+			<div class="col-auto">
+			  <input type="text" class="form-control" id="contactMobile" name="contactMobile" placeholder="Mobile Number">
+			</div>
+	</div>
+</div>
 
-    <div class="form-group">
-    <label for="contactPosition">Contact Position</label>
-    <textarea class="form-control" id="contactPosition" name="contactPosition" rows="1"></textarea>
-  </div>
+<!-- Contact Email Address-->
+<div class="form-group">
+  <label for="inputAddress">Email Address</label>
+    <div class="form-row">
+			<div class="col-auto">
+			  <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="user@email.com">
+			</div>
+	</div>
+</div>
 
-    <div class="form-group">
-    <label for="contactPhone">Contact Phone</label>
-    <textarea class="form-control" id="contactPhone" name="contactPhone" rows="1"></textarea>
-  </div>
-
-  <div class="form-group">
-    <label for="contactMobile">Contact Mobile</label>
-    <textarea class="form-control" id="contactMobile" name="contactMobile" rows="1"></textarea>
-  </div>
-
-  <div class="form-group">
-    <label for="contactEmail">Email address</label>
-    <input type="email" class="form-control" id="contactEmail" name="contactEmail" placeholder="royce@diversys.com">
-  </div>
-
-  <div class="form-group">
-    <label for="contactNotes">Contact Notes</label>
-    <textarea class="form-control" id="contactNotes" name="contactNotes" rows="3"></textarea>
-  </div>
-
+<!-- Contact Notes-->
+<div class="form-group">
+  <label for="inputAddress2">Notes</label>
+    <div class="form-row">
+		<div class="col-md-4">
+			<textarea class="form-control" id="contactNotes" rows="3" placeholder="Remarks"></textarea>
+		</div>
+	</div>
+</div>
 
 <input class="btn btn-primary" type="submit" value="Submit">
 </form>
