Implemented GET requests for reports pages

--- a/CRM/views/reports.ejs
+++ b/CRM/views/reports.ejs
@@ -5,9 +5,9 @@
   </head>
   <body>
     <h1>Welcom to the Reports Page</h1>
-    <li><a href="/customer-report">Customer Reports</a></li>
+    <li><a href="/client-report">Client Reports</a></li>
     <li><a href="/contact-report">Contact Reports</a></li>
     <li><a href="/event-report">Events Reports</a></li>
-    <li><a href="/employee-report">Employee Reports</a></li>
+    <li><a href="/agent-report">Agent Reports</a></li>
   </body>
 </html>
