Fixed check boxes FE and BE, and fixed fields that didn't have "name" field

--- a/CRM/views/agent-entry.ejs
+++ b/CRM/views/agent-entry.ejs
@@ -59,6 +59,8 @@ We need to implement the following fields: - Are we not going to keep any contac
     </div>
 </div>
 
+<!-- TODO : Add agentPhone to form -->
+
 <input class="btn btn-primary" type="submit" value="Submit">
 </form>
 
