--- a/CRM/views/client-entry.ejs
+++ b/CRM/views/client-entry.ejs
@@ -78,15 +78,15 @@
   <label for="inputAddress">Client Products</label>
 	<div class="form-row">
 		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="checkbox" id="clientProdOX" value="option1">
+		  <input class="form-check-input" type="checkbox" name="clientProdOX" value="true">
 		  <label class="form-check-label" for="clientProdOX">OX</label>
 		</div>
 		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="checkbox" id="clientProdPP" value="option2">
+		  <input class="form-check-input" type="checkbox" name="clientProdPP" value="true">
 		  <label class="form-check-label" for="clientProdPP">PP</label>
 		</div>
 		<div class="form-check form-check-inline">
-		  <input class="form-check-input" type="checkbox" id="clientProdTP" value="option2">
+		  <input class="form-check-input" type="checkbox" name="clientProdTP" value="true">
 		  <label class="form-check-label" for="clientProdTP">TP</label>
 		</div>
 	</div>	
@@ -97,7 +97,7 @@
   <label for="inputAddress2">Client Notes</label>
     <div class="form-row">
 		<div class="col-md-4">
-			<textarea class="form-control" id="clientNotes" rows="3" placeholder="Remarks"></textarea>
+			<textarea class="form-control" name="clientNotes" rows="3" placeholder="Remarks"></textarea>
 		</div>
 	</div>
 </div>
