--- a/CRM/views/contact-entry.ejs
+++ b/CRM/views/contact-entry.ejs
@@ -78,7 +78,7 @@ We need to implement the following fields
   <label for="inputAddress2">Notes</label>
     <div class="form-row">
 		<div class="col-md-4">
-			<textarea class="form-control" id="contactNotes" rows="3" placeholder="Remarks"></textarea>
+			<textarea class="form-control" name="contactNotes" rows="3" placeholder="Remarks"></textarea>
 		</div>
 	</div>
 </div>
