--- a/CRM/views/event-entry.ejs
+++ b/CRM/views/event-entry.ejs
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group col-md-6-auto">
       <label for="agentID">Agent</label>
-      <select class="form-control" id="agentID">
+      <select class="form-control" name="agentID">
 		  <option>JV</option>
 		  <option>OFC</option>
 		  <option>FB</option>
@@ -51,7 +51,7 @@
 <div class="form-row">
     <div class="form-group col-md-6-auto">
       <label for="clientID">Client</label>
-      <select class="form-control" id="clientID">
+      <select class="form-control" name="clientID">
 		  <option>Customer 1</option>
 		  <option>Customer 2</option>
 		  <option>Customer 3</option>
@@ -61,7 +61,7 @@
     </div>
     <div class="form-group col-md-6-auto">
       <label for="eventType">Visit Type</label>
-      <select class="form-control" id="clientID">
+      <select class="form-control" name="eventType">
 		  <option>Collection</option>
 		  <option>Courtesy Visit</option>
 		  <option>Technical Service</option>
@@ -78,14 +78,14 @@ Also, the contacts available as choices should be filtered based on which client
   <label for="inputAddress">Contact/s Visited</label>
     <div class="form-row">
 		<div class="form-group col-md-6-auto">
-			<select class="form-control" id="contactID">
+			<select class="form-control" name="contactID">
 				<option>Contact 1</option>
 				<option>Contact 2</option>
 				<option>Contact 3</option>
 			</select>
 		</div>
 		<div class="form-group col-md-6-auto">
-			<select class="form-control" id="contactID">
+			<select class="form-control" name="contactID">
 				<option>Contact 1</option>
 				<option>Contact 2</option>
 				<option>Contact 3</option>
@@ -109,7 +109,7 @@ Also, the contacts available as choices should be filtered based on which client
   <label for="inputAddress2">Event Notes</label>
     <div class="form-row">
 		<div class="col-md-4">
-			<textarea class="form-control" id="eventRemarks" rows="3" placeholder="Remarks"></textarea>
+			<textarea class="form-control" name="eventRemarks" rows="3" placeholder="Remarks"></textarea>
 		</div>
 	</div>
 </div>
