Added agentPhone number to data entry form

--- a/CRM/views/agent-entry.ejs
+++ b/CRM/views/agent-entry.ejs
@@ -59,7 +59,16 @@ We need to implement the following fields: - Are we not going to keep any contac
     </div>
 </div>
 
-<!-- TODO : Add agentPhone to form -->
+
+<!-- Agent Phone Number-->
+<div class="form-group">
+  <label for="agentAbbrev">Agent Phone Number</label>
+    <div class="form-row">
+			<div class="col-auto">
+			  <input type="text" class="form-control" id="agentPhone" name="agentPhone" placeholder="Contact Number">
+			</div>
+	</div>
+</div>
 
 <input class="btn btn-primary" type="submit" value="Submit">
 </form>
