fixed events-entry page to route correctly, and reversed broken for loop

--- a/CRM/views/event-entry.ejs
+++ b/CRM/views/event-entry.ejs
@@ -21,12 +21,15 @@
     <div class="form-group col-md-6-auto">
       <label for="agentID">Agent</label>
       <select class="form-control" name="agentID">
-  		<%
-        	var list = '';
-        		list += '<option>' + agentList[i].agentAbbrev + '</option>';
-        	}
-  		%>
-      	<%- list %>
+      	<option>JV</option>
+      	<option>OFC</option>
+      	<option>FB</option>
+      	<option>DG</option>
+      	<option>LA</option>
+      	<option>RPL</option>
+      	<option>JP</option>
+      	<option>KJ</option>
+      	<option>DC</option>
 	  </select>
     </div>
 </div>
