added home page and fixed index page.

--- a/CRM/views/home.ejs
+++ b/CRM/views/home.ejs
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Welcome to the New CRM</h1>
-    <h3><a href="/home">home</a></h3>
+    <h3><a href="/data-entry">Data Entry</a></h3>
+    <h3><a href="/reports">Reports</a></h3>
   </body>
 </html>
