--- a/CRM/views/contact-entry.ejs
+++ b/CRM/views/contact-entry.ejs
@@ -14,7 +14,7 @@
 <!--
 [TODO]
 We need to implement the following fields
-    Client              (lookup-Client)
+(/) Client              (lookup-Client)
 (/) Contact Name        (text)            - Are we only doing 1 field for name?
 (/) Contact Position    (text)
 (/) Contact Phone       (text)
