--- a/CRM/views/event-entry.ejs
+++ b/CRM/views/event-entry.ejs
@@ -12,7 +12,7 @@
 <form id="formAddEvent" name="addEvent" method="post" action="/addEvent">> 
  
 <!-- Event Date-->
-<!-- I don't know if I should be referring to the agentID when what I actually want to show up is the agentAbbrev -->
+<!-- [TODO] I don't know if I should be referring to the agentID when what I actually want to show up is the agentAbbrev -->
 <div class="form-row">
     <div class="form-group col-md-6-auto">
       <label for="clientName">Date</label>
@@ -47,7 +47,6 @@
 </div>
 
 <!-- Client Visited-->
-<!-- I don't know if I should be referring to the clientID when what I actually want to show up is the clientName -->
 <div class="form-row">
     <div class="form-group col-md-6-auto">
       <label for="clientID">Client</label>
@@ -73,11 +72,10 @@
 </div>
 
 <!-- Contact Visited-->
-<!-- I don't know if I should be referring to the contactID when what I actually want to show up is the contactName.
-Also, the contacts available as choices should be filtered based on which client was chosen in the above section, is that possible/hard to do? -->
+<!-- [TODO] I don't know if I should be referring to the contactID when what I actually want to show up is the contactName. Create a button for Contact(s) visited to pull all contacts with Client = ClientID Above -->
 
 <div class="form-group">
-  <label for="inputAddress">Contact/s Visited</label>
+  <label for="inputAddress">Contact(s) Visited</label>
     <div class="form-row">
 		<div class="form-group col-md-6-auto">
 			<select class="form-control" name="contactID">
@@ -98,7 +96,7 @@ Also, the contacts available as choices should be filtered based on which client
 
 <!-- Event Location/Branch-->
 <div class="form-group">
-  <label for="eventBranch">Event Location (If Applicable)</label>
+  <label for="eventBranch">Branch Location (If Applicable)</label>
     <div class="form-row">
 			<div class="col-auto">
 			  <input type="text" class="form-control" id="eventBranch" name="eventBranch" placeholder="Location">
